# Agentic_Frameworks

./: README.md
AIStartupAnalyzer/: .env.example  agents.py  app.py  main.py  models.py
GhostPress/: .gitignore  pyproject.toml
GhostPress/output/: blog_post.md  email_campaign.md
GhostPress/src/ghostpress/: crew.py  main.py
GhostPress/src/ghostpress/config/: agents.yaml  tasks.yaml
GhostPress/src/ghostpress/tools/: __init__.py  custom_tool.py
OrchestratorWorker/: orchestrator-worker-workflow.ipynb
ai_vc_debate/: .gitignore  __init__.py  orchestrator.py  requirements.txt  tools.py
