[project]
name = "ghostpress"
version = "0.1.0"
description = "GhostPress: GhostPress - A 4-agent content creation pipeline using CrewAI"
authors = [{ name = "Rishi Rochan" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "sendgrid>=6.0.0"
]

[project.scripts]
ghostpress = "ghostpress.main:run"
run_crew = "ghostpress.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
